--- a/Fx_bt/FX.html
+++ b/Fx_bt/FX.html
@@ -9,7 +9,7 @@
 <body>
     <h1>FX Information</h1>
         <ul>
-            <li class="link"><a href="../porfolio.html">Porfolio</a></li>
+            <li class="link"><a href="../index.html">Porfolio</a></li>
             <li class="link"><a href="../design/design.html">Design Web</a></li>
             <li class="link"><a href="../IT/Dev.html">Develop Web</a></li>
         </ul>
