--- a/design/design.html
+++ b/design/design.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Design Web</h1>
         <ul>
-            <li class="link"><a href="../porfolio.html">Porfolio</a></li>
+            <li class="link"><a href="../index.html">Porfolio</a></li>
             <li class="link"><a href="../Fx_bt/FX.html">FX Information</a></li>
             <li class="link"><a href="../IT/Dev.html">Develop Web</a></li>
         </ul>
